--- a/readme
+++ b/readme
@@ -24,14 +24,12 @@
  name: {mandatory}, email: {mandatory, valid email, unique}, mobile: {mandatory, valid mobile number, unique}, collegeId: {ObjectId, ref to college model, isDeleted: {boolean, default: false}}
 ```
 
-### POST /functionup/colleges
+### POST /colleges
 
 - Create a college - a document for each member of the group
 - The logo link will be provided to you by the mentors. This link is a s3 (Amazon's Simple Service) url. Try accessing the link to see if the link is public or not.
 
-  `Endpoint: BASE_URL/functionup/colleges`
-
-### POST /functionup/interns
+### POST /interns
 
 - Create a document for an intern.
 - Also save the collegeId along with the document. Your request body contains the following fields - { name, mobile, email, collegeName}
@@ -39,7 +37,7 @@
   successful
 - Return HTTP status 400 for an invalid request with a response body like [this](#error-response-structure)
 
-### GET /functionup/collegeDetails
+### GET /collegeDetails
 
 - Returns the college details for the requested college (Expect a query parameter by the name `collegeName`. This is anabbreviated college name. For example `iith`)
 - Returns the list of all interns who have applied for internship at this college.
